--- a/Project.toml
+++ b/Project.toml
@@ -5,13 +5,12 @@ version = "0.1.0"
 
 [deps]
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
-DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 StatsFuns = "4c63d2b9-4356-54db-8cca-17b64c39e42c"
-SimpleWeightedGraphs = "47aef6b3-ad0c-573a-a1e2-d07658019622"
-Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
-MetaGraphs = "626554b9-1ddb-594c-aa3c-2596fe9399a5"
 
 [compat]
 CUDA = "3"
 julia = "1.6"
+StatsFuns = "0.9"
+DataStructures = "0.17"
