--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Unit Tests
         run: |
           julia --project -e 'using Pkg; Pkg.instantiate(); Pkg.build();'
-          julia --project --check-bounds=yes --depwarn=yes -e 'import Pkg; Pkg.test(; coverage=true)'
+          julia --threads 2 --project --check-bounds=yes --depwarn=yes -e 'import Pkg; Pkg.test(; coverage=true)'
       
       - name: Codecov Upload
         run: |
