--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,5 +1,6 @@
 [deps]
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
+ChowLiuTrees = "be466665-d60c-4e0a-9ae9-070eb5e678a5"
 Jive = "ba5e3d4b-8524-549f-bc71-e76ad9e9deed"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
