--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,6 @@ DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 
 [compat]
-CUDA = "3, 4"
+CUDA = "3, 4, 5"
 DataStructures = "0.17, 0.18"
 julia = "1.6"
