--- a/test/Project.toml
+++ b/test/Project.toml
@@ -5,5 +5,5 @@ Jive = "ba5e3d4b-8524-549f-bc71-e76ad9e9deed"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
-CUDA = "3"
+CUDA = "3, 5"
 Jive = "0.2"
